# gpt-on-a-budget

./: .gitignore  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.sqlx/: query-0423e42706807f55be7bfb05a7df11b176781c94d7dcdf5034c092bff90fffff.json  query-22ac63532c594e9f678f929ec9a681378e3414bdeede1d04f7433f63e7132e96.json  query-a28b6a678d784526415526a6117a7154870217c4a5a07af452a3c0eb38375398.json  query-f5b16f79fafa2585315dc85cd659d7d0f697288af51db6219bb721cc5b9131cb.json
src-tauri/migrations/: 20250627003306_create_conversations_and_messages_tables.sql  20250815145526_create_llm_models_table.up.sql
src-tauri/src/: crypto_manager.rs  database.rs  lib.rs  llm.rs  main.rs
src/components/: ApiKeyModal.vue  ChatView.vue  Dropdown.vue  Message.vue  MessageInput.vue  Settings.vue  Sidebar.vue
src/stores/: conversations.ts  settings.ts
